external-crates/move/crates/move-compiler/tests/move_check/parser/vector_space_after_less.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_space_after_less.move:4:29
  │
4 │         let a = vector < 100;
  │                        - ---^ Unexpected ';'
  │                        │ │   
  │                        │ Expected '::' after an address in a module access chain
  │                        Perhaps you need a blank space before this '<' operator?

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_space_after_less.move:4:29
  │
4 │         let a = vector < 100;
  │                             ^
  │                             │
  │                             Unexpected ';'
  │                             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

